box-model added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -455,6 +455,74 @@
                             </ul>
                 </p>
             </details>
+            <details Border>
+                <summary><b>Border</b></summary>
+                <p>
+                <ul type="disc">
+                    <li><b>border: </b><i>1px solid red</i></li>
+                    <p>
+                    <ul type="circle">
+                        <li><b>border-width: </b><i>1px</i></li>
+                        <li><b>border-style: </b><i>solid</i></li>
+                        <li><b>border-color: </b><i>red</i></li>
+                    </ul>
+                    </p>
+                    <p>
+                    <ul>
+                        <p>
+                        <ul type="square">
+                            <li><b>border-top: </b><i>1px solid red</i></li>
+                            <li><b>border-right: </b><i>1px solid red</i></li>
+                            <li><b>border-bottom: </b><i>1px solid red</i></li>
+                            <li><b>border-left: </b><i>1px solid red</i></li>
+                        </ul>
+                        </p>
+                        <ul type="square">
+                            <li><b>border-top-width: </b><i>1px</i></li>
+                            <li><b>border-right-width: </b><i>1px</i></li>
+                            <li><b>border-bottom-width: </b><i>1px</i></li>
+                            <li><b>border-left-width: </b><i>1px</i></li>
+                        </ul>
+                        </p>
+                        <p>
+                        <ul type="square">
+                            <li><b>border-top-style: </b><i>solid</i></li>
+                            <li><b>border-right-style: </b><i>solid</i></li>
+                            <li><b>border-bottom-style: </b><i>solid</i></li>
+                            <li><b>border-left-style: </b><i>solid</i></li>
+                        </ul>
+                        </p>
+                        <p>
+                        <ul type="square">
+                            <li><b>border-top-color: </b><i>red</i></li>
+                            <li><b>border-right-color: </b><i>red</i></li>
+                            <li><b>border-bottom-color: </b><i>red</i></li>
+                            <li><b>border-left-color: </b><i>red</i></li>
+                        </ul>
+                    </ul>
+                    </p>
+                    <li><b>border-radius: </b><i>10px / 50%</i></li>
+                    <p>
+                    <ul type="circle">
+                        <li><b>border-top-left-radius: </b><i>10px</i></li>
+                        <li><b>border-top-right-radius: </b><i>10px</i></li>
+                        <li><b>border-bottom-left-radius: </b><i>10px</i></li>
+                        <li><b>border-bottom-right-radius: </b><i>10px</i></li>
+                    </ul>
+                    </p>
+                    <li><b>box-sizing: </b><i>content-box / border-box</i></li>
+                    <p>
+                    <ul type="circle">
+                        <li><b>Content Box'da</b> verilen yükseklik-genişlik değerine <i>ek olarak</i>
+                            padding-border
+                            değeri eklenir.</li>
+                        <li><b>Border Box'da</b> verilen yükseklik-genişlik değerinin <i>içinde olacak şekilde</i>
+                            padding-border değeri eklenir.</li>
+                    </ul>
+                    </p>
+                </ul>
+                </p>
+            </details>
             <details Z Index>
                 <summary><b>Z Index</b></summary>
                 <p>
