--- a/CSS/Uygulamalar/9 box-model/box-model.html
+++ b/CSS/Uygulamalar/9 box-model/box-model.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>box-model</title>
     <link rel="stylesheet" href="box-model.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap">
+    <script src="https://kit.fontawesome.com/408f914eed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <div id="blog-post-container">
             <div class="blog-post box">
                 <h2>My First Blog Post</h2>
-                <p class="date">10.10.2018</p>
+                <p class="date">18.11.2022</p>
                 <img src="img/uma.jpg" alt="Mia Wallace">
                 <p class="blog-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere quod illo sed odit odio eius
@@ -36,7 +38,7 @@
             </div>
             <div class="blog-post box">
                 <h2>My Second Blog Post</h2>
-                <p class="date">10.10.2018</p>
+                <p class="date">19.11.2022</p>
                 <img src="img/uma.jpg" alt="Mia Wallace">
                 <p class="blog-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere quod illo sed odit odio eius
@@ -58,7 +60,7 @@
             </div>
             <div class="blog-post box">
                 <h2>My Third Blog Post</h2>
-                <p class="date">10.10.2018</p>
+                <p class="date">20.11.2022</p>
                 <img src="img/uma.jpg" alt="Mia Wallace">
                 <p class="blog-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere quod illo sed odit odio eius
@@ -80,7 +82,7 @@
             </div>
             <div class="blog-post box">
                 <h2>My Fourth Blog Post</h2>
-                <p class="date">10.10.2018</p>
+                <p class="date">21.11.2022</p>
                 <img src="img/uma.jpg" alt="Mia Wallace">
                 <p class="blog-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere quod illo sed odit odio eius
@@ -133,6 +135,17 @@
                 <p class="other">
                     Lorem ipsum dolor sit amet.
                 </p>
+            </div>
+
+            <div id="share" class="box">
+                <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-square-github fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-stack-overflow fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-square-reddit fa-lg"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope fa-lg"></i></a>
             </div>
         </div>
 
