background-image (transparency) added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -290,11 +290,13 @@
                     <br>
                     <b>Linear = </b><i>giderek artan gradient efekti</i>
                     <br>
-                    <b>Radial = </b><i></i>
+                    <b>Radial = </b><i>merkezleri tarafından tanımlanır</i>
                     <br>
-                    <b>Conic = </b><i></i>
+                    <b>Conic = </b><i>bir merkez noktası etrafında döndürülmüş</i>
                     <br><br>
                     <b>Multiple = </b><i>red, orange, yellow, green, blue, purple...</i> (çok renkli gradient)
+                    <br>
+                    <b>Transparency = </b><i>rgba(0,0,0,0), rgba(0,0,0,1))</i> (şeffaflık / opaklık verme)
                     <br>
                     <b>Direction = </b><i>to right</i> [soldan sağa (tek yön)}
                     <br>
