responsive-web added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -766,6 +766,11 @@
                     <li>span {<b>font-size: </b><i>0.5em / 2em</i> (yarısı / 2 katı)</li>
                     <li>span {<b>font-weight: </b><i>bold</i> (kalın)</li>
                     <li>span {<b>font-style: </b><i>italic</i> (eğik)</li>
+                    <br>
+                    <li>html {<b>font-size: </b><i>20px</i> (harf büyüklüğü, 10px = 1rem, 20px = 2rem...)</li>
+                    <ul>
+                        <li>body {<b>font-size: </b><i>2rem</i> (harf büyüklüğü, 10px = 1rem, 20px = 2rem...)</li>
+                    </ul>
                 </ul>
                 </p>
             </details>
