flex-direction, flex-wrap added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -596,6 +596,53 @@
                             </ul>
                 </p>
             </details>
+            <details Display (flexbox)>
+                <summary><b>Display (flexbox)</b></summary>
+                <p>
+                    display: <b>flex</b><i></i>
+                </p>
+                <p>
+                <ul type="disc">
+                    <li><b>flex-direction </b><i></i> (flex-itemları sıralamak)</li>
+                    <p>
+                    <ul type="circle">
+                        <li>flex-direction: <b>row </b><i>(sola dayalı satırı kaplar, sıralama soldan başlar)</i>
+                            (varsayılan)</li>
+                        <li>flex-direction: <b>row-reverse </b><i>(sağa dayalı satırı kaplar, sıralama sağdan
+                                başlar)</i></li>
+                        <li>flex-direction: <b>column </b><i>(alt alta gelir ve satırı kaplar, sıralama üstten
+                                başlar)</i></li>
+                        <li>flex-direction: <b>column-reverse </b><i>(alt alta gelir ve satırı kaplar, sıralama alttan
+                                başlar)</i></li>
+                    </ul>
+                    </p>
+                    <li><b>flex-wrap </b><i></i> (flex-itemlara responsive kazandırmak)</li>
+                    <p>
+                    <ul type="circle">
+                        <li>flex-wrap: <b>nowrap </b><i>(satıra sığmayan elemanların aynı satırda kalması)</i> (varsayılan)</li>
+                        <li>flex-wrap: <b>wrap </b><i>(satıra sığmayan elemanların alt satıra inmesi)</i> </li>
+                        <li>flex-wrap: <b>wrap-reverse </b><i>(satıra sığmayan elemanların üst satıra çıkması)</i> </li>
+                    </ul>
+                    </p>
+                    <li><b>justify-content </b><i></i> (flex-itemları yatay hizalamak)</li>
+                    <li><b>align-items </b><i></i> (flex-itemları dikey hizalamak)</li>
+                    <li><b>align-content </b><i></i> (flex-item div grupları arasına mesafe vermek)</li>
+                    <li><b>align-self </b><i></i> (tek bir flex-itemı hareket ettirmek)</li>
+                    <li><b>order </b><i></i> (flex-itemların yerlerini değiştirmek)</li>
+                    <li><b>flex: </b><i>0 1 auto</i> (tek satırda büyüme, daralma ve genişlik oranını ayarlamak)</li>
+                    <p>
+                    <ul type="circle">
+                        <li><b>flex-grow: 0 </b><i></i> (flex-container büyüdüğünde flex-itemların büyüme oranını
+                            ayarlamak)</li>
+                        <li><b>flex-shrink: 1 </b><i></i> (flex-container daraltıldığında flex-itemların daralma oranını
+                            ayarlamak)</li>
+                        <li><b>flex-basis: auto </b><i></i> (flex-container genişletildiğinde flex-itemların genişlik
+                            oranını ayarlamak)</li>
+                    </ul>
+                    </p>
+                </ul>
+                </p>
+            </details>
             <details Border>
                 <summary><b>Border</b></summary>
                 <p>
